refactor: 배열 대신 컬렉션을 사용하도록 수정한다.